# twain-sane-macos

./: README.md
SaneBackends/src/backends_1.0.32/: AUTHORS  INSTALL.linux  LICENSE  Makefile-doc.am  Makefile.am  PROBLEMS  backend_writing.txt  configure.ac  strstatus.swift
SaneBackends/src/backends_1.0.32/backend/: Makefile.am  Sane_strstatus.swift  brother.toml  brother2.toml  brother_mfc4600.toml  dll.conf.in  dll.swift  epjitsu.swift  epjitsuCommands_h.swift  geniusvp2.toml  gphoto2.toml  hpaio.toml  hpsj5s.swift  hpsj5s_h.swift  leo.conf.in  leo.swift  pnm.swift  primascan.toml  primax.toml  qcam.toml  releases.txt  samsung.toml  stubs.swift  template.toml  utsushi.toml  viceo.toml
SaneBackends/src/backends_1.0.32/backend/Abaton/: abaton.swift
SaneBackends/src/backends_1.0.32/backend/Agfa/: agfafocus.swift
SaneBackends/src/backends_1.0.32/backend/Apple/: apple.swift
SaneBackends/src/backends_1.0.32/backend/Artec/: artec.swift  artec_eplus48u.swift  as6e.swift
SaneBackends/src/backends_1.0.32/backend/Avision/: avision.conf.in  avision.swift  avision.toml
SaneBackends/src/backends_1.0.32/backend/BH/: bh.swift
SaneBackends/src/backends_1.0.32/backend/Canon/: Canon.swift  Canon630u.swift  Canon630u_common.swift  CanonScsi.swift  Canon_dr.swift  Canon_drCommands_h.swift  Canon_lide70.swift  Canon_lide70_common.swift  Canon_pp.swift  Canon_pp_dev.swift  Canon_pp_io.swift  Canon_sane.swift
SaneBackends/src/backends_1.0.32/backend/CardScan/: cardscan.man  cardscan.swift  cardscan.toml
SaneBackends/src/backends_1.0.32/backend/Connectix/: qcam.swift  qcam_h.swift
SaneBackends/src/backends_1.0.32/backend/CoolScan/: CoolScan.swift  CoolScan2.swift  CoolScan3.swift  CoolScanScsidef_h.swift
SaneBackends/src/backends_1.0.32/backend/Dell/: dell1600n_net.conf.in  dell1600n_net.swift
SaneBackends/src/backends_1.0.32/backend/Epson/: Epson.swift  Epson.toml  Epson2.swift  Epson2Scsi.swift  Epson2Usb.swift  Epson2_cct.swift  Epson2_commands.swift  Epson2_io.swift  Epson2_net.swift  Epson2_ops.swift  EpsonScsi.swift  EpsonUsb.swift  Epsonds.swift  EpsondsCommands.swift  EpsondsJpeg.swift  EpsondsUsb.swift  Epsonds_io.swift  Epsonds_net.swift  Epsonds_ops.swift
SaneBackends/src/backends_1.0.32/backend/Fujitsu/: fujitsu.man  fujitsu.swift  fujitsu.toml  fujitsuScsi_h.swift  sp15c.swift  sp15cScsi_h.swift  sp15c_h.swift
SaneBackends/src/backends_1.0.32/backend/GT68/: gt68xx.swift  gt68xx_devices.swift  gt68xx_generic.swift  gt68xx_gt6801.swift  gt68xx_gt6816.swift  gt68xx_high.swift  gt68xx_low.swift  gt68xx_mid.swift  gt68xx_shm_channel.swift
SaneBackends/src/backends_1.0.32/backend/HP/: hp.README  hp.TODO  hp.swift  hp.toml  hp3500.swift  hp3900.conf.in  hp3900.swift  hp3900Usb.swift  hp3900_config.swift  hp3900_debug.swift  hp3900_rts8822.swift  hp3900_sane.swift  hp3900_types.swift  hp4200.swift  hp4200_lm9830.swift  hp5400.swift  hp5400_debug.swift  hp5400_internal.swift  hp5400_sane.swift  hp5400_sanei.swift  hp5400_xfer_h.swift  hp5590.swift  hp5590Commandss.swift  hp5590_low.swift  hpScsi_h.swift  hp_accessor.swift  hp_device.swift  hp_handle.swift  hp_hpmem.swift  hp_option.swift  hp_scl.swift  hpljm1005.swift
SaneBackends/src/backends_1.0.32/backend/IBM/: ibm.swift  ibmScsi.swift
SaneBackends/src/backends_1.0.32/backend/Kodak/: dc210.swift  dc240.conf.in  dc240.swift  dc25.conf.in  dc25.swift  gphoto2.conf.in  gphoto2.swift  kodak.swift  kodak.toml  kodakCommands_h.swift  kodak_twain.toml  kodakaio.swift  kodakaio_h.swift
SaneBackends/src/backends_1.0.32/backend/Lexmark/: lexmark.swift  lexmark.toml  lexmark_h.swift  lexmark_low.swift  lexmark_models.swift  lexmark_sensors.swift
SaneBackends/src/backends_1.0.32/backend/Magicolor/: magicolor.conf.in  magicolor.man  magicolor.swift  magicolor.toml  magicolor_h.swift
SaneBackends/src/backends_1.0.32/backend/Master/: sm3600.swift  sm3600_color.swift  sm3600_gray.swift  sm3600_h.swift  sm3600_homerun.swift  sm3840.swift  (+9 more)
SaneBackends/src/backends_1.0.32/doc/: .gitignore  Sane_Canon.man  Sane_Canon630u.man  Sane_Canon_dr.man  Sane_CoolScan.man  Sane_CoolScan2.man  Sane_Epson.man  Sane_Epsonds.man  Sane_abaton.man  Sane_apple.man  Sane_avision.man  Sane_bh.man  Sane_gphoto2.man  Sane_hp4200.man  Sane_hp5400.man  Sane_hp5590.man  Sane_hs2p.man  Sane_ibm.man  Sane_kvs20xx.man  Sane_lexmark.man  Sane_microtek.man  Sane_mustek_pp.man  Sane_nec.man  Sane_net.man  Sane_niash.man  Sane_pie.man  Sane_plustek.man  Sane_plustek_pp.man  Sane_qcam.man  Sane_ricoh.man  Sane_s9036.man  Sane_sharp.man  Sane_snapscan.man  Sane_st400.man  Sane_tamarack.man  Sane_teco2.man  Sane_u12.man  Sane_v4l.man  doxygen_genesys.conf.in  saneUsb.man
SaneBackends/src/backends_1.0.32/frontend/: .gitignore  Makefile.am  saned.swift  scanimage.swift  sicc.swift  stiff.swift  stiff_h.swift  test.swift  tstbackend.swift
SaneBackends/src/backends_1.0.32/include/: .gitignore  font_6x11_h.swift  lalloca_h.swift  lassert_h.swift  lgetopt_h.swift  md5_h.swift
SaneBackends/src/backends_1.0.32/lib/: alloca.swift  getenv.swift  getopt.swift  getopt1.swift  inet_ntop.swift  inet_pton.swift  md5.swift  sigprocmask.swift  sleep.swift  snprintf.swift  strcasestr.swift  strdup.swift  strndup.swift  strsep.swift  syslog.swift  usleep.swift  vsyslog.swift
SaneBackends/src/backends_1.0.32/patches/: Rules_quot.patch  ax_create_stdint_h.19_20.m4.patch
SaneBackends/src/backends_1.0.32/sanei/: DomainOS.swift  ab306.swift  access.swift  auth.swift  codec_ascii.swift  codec_bin.swift  config.swift  config2.swift  constrain_value.swift  init_debug.swift  ir.swift  jpeg.swift  linux_sg3_err_h.swift  lm983x.swift  magic.swift  net.swift  os2_srb_h.swift  pa4s2.swift  pio.swift  pp.swift  pv8630.swift  scsi.swift  tcp.swift  thread.swift  udp.swift  usb.swift  wire.swift
SaneBackends/src/backends_1.0.32/tools/: .gitignore  Epson2usb.pl  RenSaneDlls.swiftmd  Sane_config.in  Sane_desc.swift  Sane_find_scanner.swift  checkUsb_chip.swift  check_po.awk  create_release.sh  gamma4scanimage.swift  libtool_get_dll_ext  mustek600iin_off.swift  umax_pp.swift  xerox
(+1564 files in other folders)
